Fixed out-of-screen legendaries tooltip.
Fixed so that long tooltips can't go outside the bottom of the screen. Also fixed the scrollbar blinking that happened when it first created the new tooltip outside of the screen.

--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -352,11 +352,12 @@ position: relative;
 
 #item-info{
 	position: absolute;
-	display: none;
 	right: 0px;
 	top: 0px;
 	pointer-events: none;
 	width: 280px;
+	opacity: 0;
+	transition: opacity 100ms linear;
 }
 
 #item-info-box{
